- Updated usage of string and size functions - Making Formulas static thx l2j
git-svn-id: http://svn.l2jfree.com/l2jfree@5476 6ff00ba9-25cd-4355-987e-099c62bc2628